
- Get rid of scheduler warnings in STDIO marshaller.

- Get ride of scheduler warnings in RRR interface and switch to the LIBRL
  marshaller.

----------
mcadler     Date: Thu Apr 19 21:08:26 EDT 2012  CSN: CSN-leap-283
                  Fri Apr 20 01:08:26 UTC 2012


Directory config/pm/leap/submodels/fpgaenv
 fpgaenv-bare.apm          Locally Added               0 

Directory modules/leap/virtual-platform
 fpga-environment-bare.awb Locally Added               0 

Directory modules/leap/build-support/build-pipelines/stages/wrapper_gen
 wrapper_gen.py            Locally Modified          282 

Directory modules/leap/build-support/build-pipelines/stages/software
 software.py               Locally Modified          282 

Directory modules/leap/build-support/project
 project-bare-hw-main.bsv  Locally Added               0 
 project-pipeline-bare-hw.awb Locally Added               0 

Directory modules/leap/libraries/soft-services/services/soft-connections
 null-connected-module.bsv Locally Added               0 
 null-soft-connections.awb Locally Added               0 

Add a bare model optimized for fast building with no LEAP features, no
hybrid I/O, no software and no soft connections.

----------
mcadler     Date: Thu Apr 19 23:59:10 EDT 2012  CSN: CSN-leap-284
                  Fri Apr 20 03:59:10 UTC 2012


Directory modules/leap/build-support/build-pipelines/stages/bluespec
 BSV.py                    Locally Modified          283 

The top level build no longer needs to separate the log file pass from the
main compilation pass.  The log file pass was only needed to figure out the
size of the exposed soft connections vector, which does not exist at the
top level.

----------
mcadler     Date: Fri Apr 20 16:58:05 EDT 2012  CSN: CSN-leap-285
                  Fri Apr 20 20:58:05 UTC 2012


Directory scripts/bmark
 run.bmark                 Locally Modified          284 

Fix running of Bluesim-only models (no hybrid software component).